# Cardiac-Electrophysiology

./: LICENSE  README.md  pyproject.toml
data/human_atrial_fiber_atlas/patient_01/: simplices_with_anatomical_tags.txt
data/human_atrial_fiber_atlas/patient_02/: simplices_with_anatomical_tags.txt
data/human_atrial_fiber_atlas/patient_03/: simplices_with_anatomical_tags.txt
data/human_atrial_fiber_atlas/patient_04/: simplices_with_anatomical_tags.txt
data/human_atrial_fiber_atlas/patient_07/: simplices_with_anatomical_tags.txt
data/patient_01/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_02/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_03/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_04/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_05/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_06/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/patient_07/: mesh_dolfinx.h5  mesh_dolfinx.xdmf
data/processed/patient_01/: mesh_with_fibers_tags.vtk  segmentation.pkl
data/processed/patient_02/: mesh_with_fibers_tags.vtk  segmentation.pkl
data/processed/patient_03/: mesh_with_fibers_tags.vtk  segmentation.pkl
data/processed/patient_04/: mesh_with_fibers_tags.vtk
data/processed/patient_05/: mesh_with_fibers_tags.vtk
data/processed/patient_07/: segmentation.pkl
deprecated/notebooks/: laplace_test.ipynb  parameterization.pkl  preprocessing.ipynb  segmentation.pkl  snippets.ipynb  uac_complete.ipynb  uac_laplace.ipynb  uac_parameterization.ipynb  uac_segmentation.ipynb  uac_solve.ipynb
deprecated/notebooks/ulac/: parameterization.py  parameterization_base.py  preprocessing.py  segmentation.py  segmentation_base.py  solve.py
notebooks/: anatomical_tags.ipynb  basis.ipynb  coarsening.ipynb  exploration.ipynb  fiber_field_test.ipynb  fiberfield_exploration.ipynb  fiberfield_test.ipynb  find_minimal_paths.ipynb  forward_uq_test.ipynb  kruse_ulac.ipynb  mesh_processing.ipynb  parameterization.ipynb  preprocess_mesh.ipynb  preprocess_mesh.py  preprocessing.ipynb  prior_test.ipynb  segmentation.ipynb  segmentation.pkl  snippets.ipynb  tool_tests.ipynb  uac_boundaries.ipynb  uac_boundaries.py  uac_parameterization.ipynb  uac_segmentation.ipynb  ulac.ipynb  ulac_new.ipynb
notebooks/component_tests/: fiberfield_test.ipynb  forward_uq_test.ipynb  inverse_uq_test.ipynb  prior_test.ipynb
src/cardiac_electrophysiology/: data_processing.py  fiberfield.py  fibertensor.py  mesh_processing.py  pts_map.py
src/cardiac_electrophysiology/ls_bip/: components.py  ls_bip.py  posterior.py
src/cardiac_electrophysiology/ulac/: base.py  computations.py  config.py  config_new.py  configuration.py  construction.py  construction_base.py  construction_new.py  data_structures.py  interface.py  parameterization.py  parameterization_base.py  preprocessing.py  segmentation.py  segmentation_base.py  specifications.py  ulac.py  ulac_olf.py  workflow.py
src/cardiac_electrophysiology/ulac/base/: parameterization_base.py  segmentation_base.py
src/cardiac_electrophysiology/ulac/deprecated/: configuration.py  construction.py
src/cardiac_electrophysiology/utils/: data_processing.py
