[project]
authors = [{name = "Max Kruse", email = "maximilian.kruse@kit.edu"}]
name = "cardiac-electrophysiology"
requires-python = ">= 3.13"
version = "0.1.0"
dependencies = ["eikonax==0.3.4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://repo.prefix.dev/kruse-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cardiac_electrophysiology = { path = ".", editable = true }

[tool.pixi.dependencies]
pyvista = ">=0.46.3,<0.47"
vtk = ">=9.4.2,<10"
fenics-dolfinx = ">=0.9.0,<0.10"
scifem = ">=0.7.0,<0.8"
mpich = ">=4.3.1,<5"
numpy = ">=2.0,<3"
scipy = ">=1.16.2,<2"
beartype = ">=0.21.0,<0.22"
jupyter = ">=1.1.1,<2"
pandas = ">=2.3.2,<3"
matplotlib = ">=3.10.6,<4"
seaborn = ">=0.13.2,<0.14"
trame = ">=3.12.0,<4"
trame-vtk = ">=2.9.1,<3"
trame-vuetify = ">=3.0.3,<4"
ruff = ">=0.13.1,<0.14"
gmsh = ">=4.13.1,<5"
meshio = ">=5.3.5,<6"
ls-prior = ">=0.4.14,<0.5"
pygmsh = ">=7.1.17,<8"
colorcet = ">=3.1.0,<4"
trimesh = ">=4.8.3,<5"
networkx = ">=3.5,<4"
vedo = ">=2025.5.4,<2026"
pymeshfix = ">=0.17.1,<0.18"


# ==================================================================================================
# Ruff
# ==================================================================================================
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
per-file-ignores = { "test/*" = [
  "D100",
  "D101",
  "D103",
  "D104",
  "INP001",
  "SLF001",
] }
pydocstyle.convention = "google"


# ==================================================================================================
# Pytest
# ==================================================================================================
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=ls_prior",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "slow: tests with long runtime",
]
