[project]
authors = [{name = "Max Kruse", email = "maximilian.kruse@kit.edu"}]
name = "cardiac-electrophysiology"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://repo.prefix.dev/kruse-forge"]
platforms = ["linux-64"]


[tool.pixi.pypi-dependencies]
cardiac_electrophysiology = { path = ".", editable = true }
eikonax = ">=0.4.0"
fast-simplification = ">=0.1.12"
libigl = ">=2.6.1"

[tool.pixi.dependencies]
numpy = ">=2.3.4,<3"
scipy = ">=1.16.2,<2"
jupyter = ">=1.1.1,<2"
pandas = ">=2.3.3,<3"
matplotlib = ">=3.10.7,<4"
seaborn = ">=0.13.2,<0.14"
beartype = ">=0.21,<0.23"
numba = ">=0.62.1,<0.63"
ruff = ">=0.14.1,<0.15"
pyvista = ">=0.46.3,<0.47"
vtk = ">=9.5.2,<10"
trame = ">=3.12.0,<4"
trame-vtk = ">=2.10.0,<3"
trame-vuetify = ">=3.1.0,<4"
meshio = ">=5.3.5,<6"
trimesh = ">=4.8.3,<5"
colorcet = ">=3.1.0,<4"
ls-prior = ">=0.4.16,<0.5"
networkx = ">=3.5"
igraph = ">=0.10.16"
python-igraph = ">=0.11.9"
jax = ">=0.7.2,<0.8"
sparse = ">=0.17.0,<0.18"


# ==================================================================================================
# Ruff
# ==================================================================================================
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
per-file-ignores = { "test/*" = [
  "D100",
  "D101",
  "D103",
  "D104",
  "INP001",
  "SLF001",
] }
pydocstyle.convention = "google"


# ==================================================================================================
# Pytest
# ==================================================================================================
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=ls_prior",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "slow: tests with long runtime",
]
